# automaweb

./: .gitignore  README.md  pyproject.toml
automaweb/: main.py
automaweb/testes/: coletando_cookies_undetected.py  funcoes_OS.py  undetected.py
