[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automaweb"
version = "0.1.3"
description = "Biblioteca para automatização web com Selenium e Edge"
readme = "README.md"
authors = [{ name = "João Braga"}]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium",
]

[project.urls]
"Homepage" = "https://github.com/bvkila/automaweb"